fix for useless scrollbars

--- a/packages/nyris-webapp/src/components/Experience-visual-search/ExperienceVisualSearch.scss
+++ b/packages/nyris-webapp/src/components/Experience-visual-search/ExperienceVisualSearch.scss
@@ -57,7 +57,6 @@ body.overflow-hidden {
     height: 100%;
     background-color: #F3F3F5;
     padding: 32px 16px;
-    overflow: scroll;
     .close-icon {
       top: 8px;
       right: 8px;
